# GC-for-C

./: .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: BuildFlags.cmake
include/: gc.h
src/: CMakeLists.txt  gc.cpp  gc_fwd.h  gc_impl.cpp  gc_impl.h  gc_pacer.cpp  gc_pacer.h  gc_scheduler.cpp  gc_scheduler.h  stealing_queue.h
tests/: .clang-tidy  CMakeLists.txt  gc_lib_bench.cpp  gc_lib_test.cpp  gc_multithread_test.cpp  gc_sched_bench.cpp  gc_sched_test.cpp  gc_simple_bench.cpp  gc_test.cpp  memory_actions.h  utils.h
text/: annotation.tex  arch.tex  compare.tex  conclusion.tex  coursework.tex  introduction.tex  lit_review.tex  optimizing.tex  plan.tex  refs.bib  testing.tex  title_kr.tex
